API & MVC Controllers

--- a/TP_Back/appsettings.json
+++ b/TP_Back/appsettings.json
@@ -5,5 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "ThingsContextConnection": "Server=(localdb)\\MSSQLLocalDB;Database=ThingsLoans;Integrated Security=SSPI;MultipleActiveResultSets=true;"
+  },
+  "JWT": {
+    "Issuer": "TP_Back",
+    "Audience": "TP_Back"
+  },
+  "Key": "clavesupersecretaypiolaparajwt",
   "AllowedHosts": "*"
 }
